--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "@testing-library/dom": "10.3.2",
     "@testing-library/react": "16.0.0",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@types/jest": "29.5.13",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.16.0",
@@ -82,7 +83,7 @@
     "postcss": "8.4.39",
     "postcss-styled-syntax": "0.6.4",
     "react-lottie": "^1.2.4",
-    "storybook": "8.2.4",
+    "storybook": "8.3.5",
     "stylelint": "16.6.1",
     "stylelint-config-clean-order": "6.1.0",
     "stylelint-config-standard": "36.0.1",
