--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,7 @@
     "plugin:storybook/recommended"
   ],
   "rules": {
+    "react/prop-types": "off",
     "@typescript-eslint/consistent-type-imports": "error",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
