chore: 환경 별 원격 캐시 설정 추가

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -7,6 +7,7 @@ spring:
       - ${SECURITY_PATH:classpath:security}/cors.yml
       - ${SECURITY_PATH:classpath:security}/logback.yml
       - ${SECURITY_PATH:classpath:security}/actuator.yml
+      - ${SECURITY_PATH:classpath:security}/cache-dev.yml
 
   jpa:
     hibernate:
