--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -15,6 +15,11 @@ spring:
     init:
       mode: never
 
+  data:
+    redis:
+      host: localhost
+      port: 6370
+
 logging:
   level:
     org.hibernate.orm.jdbc:
