--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=linux/arm64 openjdk:17-ea-11
+FROM openjdk:17-ea-11
 
 ARG SECURITY_VOLUME=/momo/security
 ENV SECURITY_PATH=$SECURITY_VOLUME
