--- a/.github/workflows/backend-prod-cd.yml
+++ b/.github/workflows/backend-prod-cd.yml
@@ -56,7 +56,13 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3 
+        
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
@@ -66,10 +72,6 @@ jobs:
       - name: Build with Gradle (clean)
         run: ./gradlew clean bootJar
 
-      # Docker 이미지 빌드
-      - name: Docker image build
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/momo-api-prod .
-
       # DockerHub 로그인
       - name: Docker login
         uses: docker/login-action@v3
@@ -77,19 +79,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Docker Hub 이미지 푸시
-      - name: Docker Hub push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/momo-api-prod
+      # Docker 이미지 빌드 & 푸시
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/momo-api-prod
+          platforms: |
+            linux/amd64
+            linux/arm64
 
   be-depoly:
     needs: be-build
-    strategy:
-      matrix:
-        # 매트릭스 전략으로 여러 runner를 사용할 수 있도록 설정
-        runner: [ prod-a, prod-b ]
-      # fail-fast 옵션을 명시적으로 설정
-      fail-fast: true
-    runs-on: [ self-hosted, linux, ARM64, "${{ matrix.runner }}" ]
+    runs-on: [ self-hosted, linux, prod ]
     defaults:
       run:
         shell: bash
